--- a/shdm-item7-rotas-us-east-1.yaml
+++ b/shdm-item7-rotas-us-east-1.yaml
@@ -6,26 +6,26 @@ Resources:
     Properties:
       RouteTableId: !ImportValue 'rtPubId'
       DestinationCidrBlock: 10.10.0.0/16
-      GatewayId: 'pcx-05f7e3f9aa61dbc4c'
+      VpcPeeringConnectionId: 'pcx-05f7e3f9aa61dbc4c'
 
   Rota2:
     Type: 'AWS::EC2::Route'
     Properties:
       RouteTableId: !ImportValue 'rtPriv1Id'
       DestinationCidrBlock: 10.10.0.0/16
-      GatewayId: 'pcx-05f7e3f9aa61dbc4c'
+      VpcPeeringConnectionId: 'pcx-05f7e3f9aa61dbc4c'
 
   Rota3:
     Type: 'AWS::EC2::Route'
     Properties:
       RouteTableId: !ImportValue 'rtPriv2Id'
       DestinationCidrBlock: 10.10.0.0/16
-      GatewayId: 'pcx-05f7e3f9aa61dbc4c'
+      VpcPeeringConnectionId: 'pcx-05f7e3f9aa61dbc4c'
 
   Rota4:
     Type: 'AWS::EC2::Route'
     Properties:
       RouteTableId: !ImportValue 'rtPriv3Id'
       DestinationCidrBlock: 10.10.0.0/16
-      GatewayId: 'pcx-05f7e3f9aa61dbc4c' 
+      VpcPeeringConnectionId: 'pcx-05f7e3f9aa61dbc4c' 
            
