--- a/shdm-item4-ec2-bastionhost.yaml
+++ b/shdm-item4-ec2-bastionhost.yaml
@@ -16,6 +16,18 @@ Resources:
         FromPort: 80
         ToPort: 80
         CidrIp: "0.0.0.0/0"
+      - IpProtocol: -1
+        FromPort: 0
+        ToPort: 65535
+        CidrIp: "10.10.0.0/16"
+      - IpProtocol: -1
+        FromPort: 0
+        ToPort: 65535
+        CidrIp: "10.20.0.0/16"        
+      - IpProtocol: -1
+        FromPort: 0
+        ToPort: 65535
+        CidrIp: "172.31.0.0/16"
 
   EC2Instance: 
     Type: AWS::EC2::Instance
