--- a/shdm-item8-buckets3-users.yaml
+++ b/shdm-item8-buckets3-users.yaml
@@ -14,7 +14,7 @@ Resources:
 
 Outputs:
   BucketName: 
-    Description: Nome do Bucket da Camada de Usuários para Depósito de Imagens
+    Description: Nome do Bucket da Camada de Usuarios para Deposito de Imagens
     Value: !Ref S3Bucket   
     Export: 
       Name: BucketName
