--- a/cloudformation-shdm/shdm-item3-iot-device-simulator-ec2.yaml
+++ b/cloudformation-shdm/shdm-item3-iot-device-simulator-ec2.yaml
@@ -37,7 +37,7 @@ Resources:
   EC2Instance: 
     Type: AWS::EC2::Instance
     Properties:
-      InstanceType: "t2.micro"
+      InstanceType: "t3.large"
       ImageId: "ami-0e86e20dae9224db8"
       Tags:
         - Key: Name
